VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc5Down.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [56MB/2.258GB][  2%][=>                                                ][18.67MB/s]  [112MB/2.258GB][  4%][==>                                               ][28MB/s]  [176MB/2.258GB][  7%][===>                                              ][35.2MB/s]  [232MB/2.258GB][ 10%][=====>                                            ][38.67MB/s]  [288MB/2.258GB][ 12%][======>                                           ][41.14MB/s]  [352MB/2.258GB][ 15%][=======>                                          ][44MB/s]  [408MB/2.258GB][ 17%][========>                                         ][45.33MB/s]  [464MB/2.258GB][ 20%][==========>                                       ][46.4MB/s]  [512MB/2.258GB][ 22%][===========>                                      ][46.55MB/s]  [568MB/2.258GB][ 24%][============>                                     ][47.33MB/s]  [624MB/2.258GB][ 26%][=============>                                    ][48MB/s]  [672MB/2.258GB][ 29%][==============>                                   ][48MB/s]  [728MB/2.258GB][ 31%][===============>                                  ][48.53MB/s]  [776MB/2.258GB][ 33%][================>                                 ][48.5MB/s]  [832MB/2.258GB][ 35%][=================>                                ][48.94MB/s]  [888MB/2.258GB][ 38%][===================>                              ][49.33MB/s]  [952MB/2.258GB][ 41%][====================>                             ][50.11MB/s]  [1008MB/2.258GB][ 43%][=====================>                            ][50.4MB/s]  [1.039GB/2.258GB][ 46%][=======================>                          ][50.67MB/s]  [1.094GB/2.258GB][ 48%][========================>                         ][50.91MB/s]  [1.156GB/2.258GB][ 51%][=========================>                        ][51.48MB/s]  [1.211GB/2.258GB][ 53%][==========================>                       ][51.67MB/s]  [1.266GB/2.258GB][ 56%][============================>                     ][51.84MB/s]  [1.32GB/2.258GB][ 58%][=============================>                    ][52MB/s]  [1.352GB/2.258GB][ 59%][=============================>                    ][51.26MB/s]  [1.391GB/2.258GB][ 61%][==============================>                   ][50.86MB/s]  [1.43GB/2.258GB][ 63%][===============================>                  ][50.48MB/s]  [1.477GB/2.258GB][ 65%][================================>                 ][50.4MB/s]  [1.516GB/2.258GB][ 67%][=================================>                ][50.06MB/s]  [1.555GB/2.258GB][ 68%][==================================>               ][49.75MB/s]  [1.594GB/2.258GB][ 70%][===================================>              ][49.45MB/s]  [1.633GB/2.258GB][ 72%][====================================>             ][49.18MB/s]  [1.68GB/2.258GB][ 74%][=====================================>            ][49.14MB/s]  [1.719GB/2.258GB][ 76%][======================================>           ][48.89MB/s]  [1.75GB/2.258GB][ 77%][======================================>           ][48.43MB/s]  [1.797GB/2.258GB][ 79%][=======================================>          ][48.42MB/s]  [1.836GB/2.258GB][ 81%][========================================>         ][48.21MB/s]  [1.883GB/2.258GB][ 83%][=========================================>        ][48.2MB/s]  [1.922GB/2.258GB][ 85%][==========================================>       ][48MB/s]  [1.961GB/2.258GB][ 86%][===========================================>      ][47.81MB/s]  [2GB/2.258GB][ 88%][============================================>     ][47.63MB/s]  [2.039GB/2.258GB][ 90%][=============================================>    ][47.45MB/s]  [2.078GB/2.258GB][ 92%][==============================================>   ][47.29MB/s]  [2.109GB/2.258GB][ 93%][==============================================>   ][46.96MB/s]  [2.148GB/2.258GB][ 95%][===============================================>  ][46.81MB/s]  [2.188GB/2.258GB][ 96%][================================================> ][46.67MB/s]  [2.227GB/2.258GB][ 98%][=================================================>][46.53MB/s]  [2.258GB/2.258GB][100%][==================================================][47.19MB/s]  [2.258GB/2.258GB][100%][==================================================][47.19MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_38234/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_38234/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
